--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "18" # Or your preferred Node version
+          node-version: "20"
           cache: "npm"
           cache-dependency-path: "./portfolioApp/package-lock.json"
 
